# samconf

./: .gitlab-ci.yml  README.md
.github/: index.md
ci/: build.sh  build_doc.sh  index.rst  install_deps.py  run_smoketests.sh  run_utest.sh
cmake/: project.cmake
debian/: .gitignore  README.source  changelog  clean  control  copyright  gbp.conf  libmock-samconf0.install  libsamconf-dev.install  libsamconf-test-utils0.install  libsamconf0.install  not-installed  rules  samconf-doc.install  watch
debian.native/: .gitignore  README.md  changelog  control  copyright  libsamconf-dev.install  libsamconf0.install  rules
debian/patches/: 0001-signature.sh-update-script-name-references.patch  0002-cmake-use-PROGRAMS-form-for-signature.sh.patch  0003-cmake-rename-signature.sh-to-samconf-sign.patch  0004-samprobe-fix-typo.patch  0005-samconf-fix-typo.patch  0006-smoketest-fix-typo.patch  series
doc/source/: conf.py
src/: CMakeLists.txt  signature.sh
src/demo/: samprobe.c
src/samconf/private/: samconf.c
src/samconf/public/samconf/: samconf.h
test/smoketest/: smoketest.sh
test/utest/: CMakeLists.txt
test/utest/mocks/: CMakeLists.txt
test/utest/mocks/samconf/: mock_samconf.c  mock_samconf.h
test/utest/samconf/samconf/: CMakeLists.txt
test/utest/samconf/samconf/samconfConfigGet/: CMakeLists.txt  case_success_root_has_no_child.c  samconfConfigGet_utest.c  samconfConfigGet_utest.h
test/utest/samconf/samconf/samconfConfigGetBoolOr/: CMakeLists.txt  case_err_path_null.c  case_err_root_null.c  case_exterr_configget.c  case_success_entry_found.c  case_success_entry_not_found.c  case_success_node_not_bool.c  samconfConfigGetBoolOr_utest.c  samconfConfigGetBoolOr_utest.h
test/utest/samconf/samconf/samconfConfigGetInt32Or/: CMakeLists.txt  case_err_path_null.c  case_err_root_null.c  case_exterr_configget.c  case_success_entry_found.c  case_success_entry_not_found.c  case_success_node_not_int32.c  samconfConfigGetInt32Or_utest.c  samconfConfigGetInt32Or_utest.h
test/utest/samconf/samconf/samconfConfigGetRealOr/: CMakeLists.txt  case_err_path_null.c  case_err_root_null.c  case_exterr_configget.c  case_success_entry_found.c  case_success_entry_not_found.c  case_success_node_not_int32.c  samconfConfigGetRealOr_utest.c  samconfConfigGetRealOr_utest.h
test/utest/utils/: CMakeLists.txt  Config.cmake.in
test/utest/utils/private/: createMockConfigUtil.c
test/utest/utils/public/samconf/: test_utils.h
(+10 files in other folders)
